# misc-stuff

./: .gitignore  README.md  bash_profile  brew.casks  brew.leaves  package-lock.json  poems.dot  poems1.dot  poems2.dot  poems3.dot  zshrc
abc/: .gitignore  AllByCheating.abc  AwesomeBlueCrocodile.abc  RareOuldTimes.abc  RareOuldTimes.abc4  SpancilHill.abc  ateam.abc  chord-test.abc4  chords.m4  midi.m4  miditest.abc4  rondo.abc  rondomized.abc  template.abc  template.abc4  wherever-you-will-go.abc  wherever-you-will-go.csv
algs4/: BUILD  BruteCollinearPoints.java  Deque.java  FastCollinearPoints.java  KdTree.java  Percolation.java  PercolationStats.java  PointSET.java  Subset.java
algs_pt1/: BUILD  Board.java  Fcpt.java  Percolation.java  Point.java  RandomizedQueue.java  Solver.java  WORKSPACE
algs_pt2/: BUILD  Outcast.java  SAP.java  WordNet.java
algsbook/: BUILD  HelloWorld.java
android/dashy/: nativescript.config.ts  package-lock.json  (+1 more)
aoc2025/: Cargo.toml
cpp/: WORKSPACE
genealogy/: BartlettDolan.ged
go/: WORKSPACE
golang/: go.mod
j8/: BUILD  Demo.java
kml/: icmeler.kml
multitool/: app.ts  index.ts  package-lock.json  package.json
other/: bocs.html  test.dot  torn.ipynb  wordle.sh
python/: graphgen.py  repl.py  test.csv
quarto/: .gitignore
rust/pita/: .gitignore  Cargo.toml  LICENSE-MIT  README.md  index.html
rust/pita/assets/: sw.js
rust/pita/src/: main.rs
sophie/: poems1.dot  poems2.dot  poems3.dot
tex/: .gitignore  MathsCheatSheet.tex  example.tex  p3s1.tex  physics.tex  poster.tex  poster2.tex  stats.tex  tikz.tex
(+647 files in other folders)
